<resources>
    <string name="app_name">Student Buddy</string>
    <string name="action_logout"> Log Out</string>
    <string name="facebook_app_id">YOUR_FACEBOOK_APP_ID</string>
    <string name="loading">Loading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_main">GTUC</string>
    <string name="dummy_button">Continue</string>
    <string name="dummy_content">Organize, Plan and Improve\nYour Study Life</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Surname</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Already have an account, Sign In</string>
    <string name="action_sign_up">Already have an account, Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_homepage">Dashboard</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    //test
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <!-- TODO: Flash card -->
    <string name="category_name">Category Name</string>
    <string name="create_category">Create Category</string>

    <string name="new_cat_title">New Category</string>
    <string name="new_deck_title">New Deck</string>
    <string name="new_flashcard_title">New FlashCard</string>
    <string name="deck_name">Deck Name</string>
    <string name="flashcard_title">Flashcard Title</string>
    <string name="flashcard_content">Flashcard Content...</string>
    <string name="flashcard_answer">Flashcard Answer</string>
    <string name="flashcard_content_dummy">Flashcard Content</string>
    <string name="create_flashcard">Create Flashcard</string>
    <string name="create_deck">Create Deck</string>


    <!-- Nav drawer titles. Can be accessed programaticaly using a String[] -->
    <string-array name="nav_drawer_titles">
        <item>Categories</item>
        <item>Settings</item>
    </string-array>
    <!-- Nav drawer icons. Can be accessed pragmatically using a TypedArray[] -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Recorder strings -->

    <string name="action_licenses">Licenses</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>

    <!-- Notifications -->
    <string name="notification_recording">Recording...</string>

    <!-- Dialogs -->
    <string name="dialog_title_delete">Confirm Delete...</string>
    <string name="dialog_text_delete">Are you sure you would like to delete this file?</string>
    <string name="dialog_title_licenses">Open Source Licenses</string>
    <string name="dialog_title_share">Share File</string>
    <string name="dialog_title_rename">Rename File</string>
    <string name="dialog_title_options">Options</string>

    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>
    <string name="student_login">Student Login</string>
    <string name="student_register">Student Register</string>

    // Flash card strings
    <string name="menu_play">Play</string>
    <string name="menu_decks">Manage decks</string>
    <string name="lbl_manage_deck">Manage deck</string>
    <string name="menu_cards">Manage cards</string>
    <string name="lbl_card_options">Manage card</string>
    <string name="lbl_no_cards">This deck is empty, press the menu key to add new cards</string>
    <string name="menu_insert">Add a new card</string>
    <string name="menu_remove_card">Remove this card</string>
    <string name="menu_edit_card">Edit card info</string>
    <string name="lbl_save">Save</string>
    <string name="body">Back Face</string>
    <string name="edit_card">Edit card</string>
    <string name="lbl_save_and_add_more">Save &amp; Add New</string>
    <string name="rcd_saved">Record Saved</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_fail">Fail</string>
    <string name="menu_reverse">Reverse Front/Back</string>
    <string name="lbl_play_empty">There are not enough cards, add at least two different cards to play.</string>
    <string name="lbl_no_decks">There are currently no decks, create one to start</string>
    <string name="menu_edit_deck">Edit deck info</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="menu_todeck">Add to a deck</string>
    <string name="menu_edit_many">Edit many</string>
    <string name="menu_create_deck">Create a new deck</string>
    <string name="lbl_delete_allcards_question">Are you sure? All cards will Also be deleted.</string>
    <string name="menu_delete_deck">Remove this deck</string>
    <string name="btn_add_cards_to_deck">Add cards to this deck</string>
    <string name="menu_import_deck">Import a deck</string>
    <string name="menu_import_cards_for_deck">Import cards for this deck</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_deck_name">Deck Name</string>
    <string name="lbl_accept">Confirm</string>
    <string name="lbl_remove_deck">Remove Deck</string>
    <string name="menu_manage_deck_cards">Manage cards of this deck</string>
    <string name="menu_create_card">Create a new card</string>
    <string name="lbl_remove_card_confirm">Are you sure to remove this card?</string>
    <string name="menu_settings">Settings</string>
    <string name="lbl_place_in_deck">Place in this deck</string>
    <string name="lbl_front_title">Front Title</string>
    <string name="lbl_front_desc">Front Description</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_back_title">Back Title</string>
    <string name="lbl_back_desc">Back Description</string>
    <string name="lbl_flip_card">Flip card</string>
    <string name="lbl_clear">Clear</string>
    <string name="lbl_front">Front</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_import_empty">To import a CSV File, place it under the folder &quot;Flashcards&quot; on your SD Card and then select it here.</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_edit_card_confirm">This will terminate the current game. Are you sure?</string>
    <string name="lbl_results">Results</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_exit">Exit</string>
    <string name="lbl_successes">Successes: %d</string>
    <string name="lbl_fails">Fails: %d</string>
    <string name="grade">Grade</string>
    <string name="gpa_weight">Credit Hour</string>


    <string-array name="priority_levels">
        <item>Low Priority</item>
        <item>Normal priority</item>
        <item>High priority</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="do_not_show_splash">Don\'t show plash</string>

    <string name="current_task">Current</string>
    <string name="done_task">Done</string>

    <string name="dialog_editing_title">Editing task</string>

    <string name="dialog_title">Adding task</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_error_emrty_title">Please, enter the title.</string>

    <string name="dialog_removing_message">Are you want to delete this task?</string>
    <string name="removed">Removed</string>

    <string name="task_title">Title</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>

    <string name="separator_overdue">Overdue</string>
    <string name="separator_today">Today</string>
    <string name="separator_tomorrow">Tomorrow</string>
    <string name="separator_future">Future</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_Calender">My Calender</string>

</resources>
